--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-TMDB_API_KEY=
+TMDB_API_KEY=your_api_key
 TMDB_API_LANG=en-US
 TMDB_API_URL = 'https://api.themoviedb.org/3'
 TMDB_API_IMG_URL= 'https://image.tmdb.org/t/p'
 
 DB_HOST='127.0.0.1'
 DB_PORT='3306'
-DB_NAME='movies-trailer'
+DB_NAME='movies'
 DB_USER=root
 DB_PASS=
 
 TTL=3600
 MAX_KEYS=100
 
-JWT_SECRET=
+JWT_SECRET=your_sevret
 JWT_EXPIRES_IN=86400
 
-VUE_APP_BASE_URI='http://localhost:3000'
+VUE_APP_BASE_URI=http://localhost:3000
 
